Bug 446539 - right-click open terminal here in Dolphin crashes Dolphin
Summary: right-click open terminal here in Dolphin crashes Dolphin
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-06 04:06 UTC by Tyler P
Modified: 2021-12-17 17:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.04
Sentry Crash Report:


Attachments
Krash file from export. (14.28 KB, text/vnd.kde.kcrash-report)
2021-12-06 04:06 UTC, Tyler P
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tyler P 2021-12-06 04:06:49 UTC
Created attachment 144247 [details]
Krash file from export.

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Open Dolphin
2. Right click
3. Select open terminal here

OBSERVED RESULT
Crash

EXPECTED RESULT
terminal opening in current directory

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Tumbleweed
(available in About System)
KDE Plasma Version: 5.23.4
KDE Frameworks Version: 5.88.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
check kcrash file
Comment 1 Bug Janitor Service 2021-12-07 09:03:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/648
Comment 2 Harald Sitter 2021-12-17 14:29:40 UTC
Git commit 98bffe8809362e3cd3673da70aa451a094113850 by Harald Sitter.
Committed on 17/12/2021 at 14:29.
Pushed by sitter into branch 'master'.

do not access service past its prime

service is only set when we actually resolved from a service, but
sometimes we resolve from path. refactor service resolution into a
helper function and scope it to the fallback if such that the rest of
the determine function no longer has access to the potentially null
service pointer.

also add a nasty bool switch to the private function so we can
synthesize the condition even when konsole is installed (i.e. the
majority of dev systems ;))

M  +24   -0    autotests/kterminallauncherjobtest.cpp
M  +1    -0    autotests/kterminallauncherjobtest.h
A  +3    -0    autotests/kterminallauncherjobtest/konsole
M  +17   -7    src/gui/kterminallauncherjob.cpp
M  +1    -1    src/gui/kterminallauncherjob.h

https://invent.kde.org/frameworks/kio/commit/98bffe8809362e3cd3673da70aa451a094113850